tests/should_fail/question_mark_on_non_option.nv
module main

// SHOULD FAIL: ? on a non-Option type (Int)
let x = 42
let y = x?
